--- a/03_tf_art_apgd_samples.ipynb
+++ b/03_tf_art_apgd_samples.ipynb
@@ -5,7 +5,7 @@
    "id": "5bae8e9f",
    "metadata": {},
    "source": [
-    "# ART APGD sample generation (TF2.10)\n",
+    "# ART APGD sample generation (TF2.11)\n",
     "\n",
     "Generate APGD-CE adversarial samples using ART against:\n",
     "- $\\mathcal{U}^{(0)}$: baseline ensemble (4 ResNet + 4 VGG probability models)\n",
@@ -51,7 +51,6 @@
     "apgd_out    = PATHS[\"apgd_out\"]\n",
     "\n",
     "seed = int(EXP[\"seed\"])\n",
-    "apgd_cfg = EXP[\"art_apgd\"]\n",
     "APGD_SETTINGS = {\n",
     "    \"weak\":   (0.5, 0.2, 2,  4),\n",
     "    \"strong\": (0.7, 0.2, 10, 4),\n",
@@ -180,16 +179,18 @@
     "samples = {}\n",
     "y_true_dict = {}\n",
     "for p in os.listdir(APGD_OUT):\n",
+    "    if 'from' in p or not p.endswith('.npz'):\n",
+    "        continue\n",
     "    d = np.load(APGD_OUT/Path(p))\n",
     "    adv_name = 'APGD_weak' if d['max_iter'] == 2 else 'APGD_strong'\n",
-    "    split = str(d['split'])\n",
-    "    tag = str(d[\"tag\"]) if \"tag\" in d.files else \"\"\n",
+    "    split = str(d['split']).split('_')[0]\n",
+    "    tag = str(d[\"tag\"]) if \"tag\" in d.files else \"U0\" # released sample has no tag\n",
     "    sample_name = f\"{tag}_{adv_name}_{split}\" if tag else f\"{adv_name}_{split}\"\n",
     "    samples[sample_name] = d['x_adv']\n",
     "    y_true_dict[sample_name] = d['y']\n",
     "\n",
-    "x_temp = np.concatenate([samples['APGD_weak_U0_train'],samples['APGD_weak_U0_val']],axis=0)\n",
-    "y_temp = np.concatenate([y_true_dict['APGD_weak_U0_train'],y_true_dict['APGD_weak_U0_val']],axis=0)\n",
+    "x_temp = np.concatenate([samples['U0_APGD_weak_train'],samples['U0_APGD_weak_val']],axis=0)\n",
+    "y_temp = np.concatenate([y_true_dict['U0_APGD_weak_train'],y_true_dict['U0_APGD_weak_val']],axis=0)\n",
     "\n",
     "new_stratified_x_train, new_stratified_x_val, new_stratified_y_train, new_stratified_y_val = train_test_split(\n",
     "        x_temp,\n",
@@ -203,11 +204,12 @@
     "\n",
     "model_dict = {}\n",
     "for f_name in sorted(os.listdir(\"./data/models/\")):\n",
-    "    if 'original' not in f_name and f_name.endswith('keras'):\n",
+    "    if f_name.endswith('keras') and 'resnet' in f_name:\n",
     "        m = load_model(f\"./data/models/{f_name}\")\n",
     "        model_dict[f_name] = m\n",
     "        \n",
     "adv_sample_name = 'APGD_weak'\n",
+    "\n",
     "for model_name, m in model_dict.items():\n",
     "    model_name = model_name[:-6]\n",
     "    model_name = model_name.split('_')[0] if model_name[0] == 'v' else model_name.split('_')[0] + model_name.split('_')[-1] + 'v'+model_name.split('_')[1][-1]\n",
@@ -217,12 +219,6 @@
     "        m,\n",
     "        new_model_path=f\"{model_name}_{adv_sample_name}-SP\")\n",
     "\n",
-    "# Reload models since above specialization may affect the loaded original models.\n",
-    "model_dict = {}\n",
-    "for f_name in sorted(os.listdir(\"./data/models/\")):\n",
-    "    if 'original' not in f_name and f_name.endswith('keras'):\n",
-    "        m = load_model(f\"./data/models/{f_name}\")\n",
-    "        model_dict[f_name] = m\n",
     "\n",
     "SPs_GLOB = [\n",
     "    \"./data/specialized_models/*.keras\"\n",
