--- a/04_main_experiment.ipynb
+++ b/04_main_experiment.ipynb
@@ -5,7 +5,7 @@
    "id": "ea35ca26",
    "metadata": {},
    "source": [
-    "# Main experiment (TF2.10)\n",
+    "# Main experiment (TF2.11)\n",
     "\n",
     "This notebook produces the main experimental pipeline:\n",
     "- Load CIFAR-10 and adversarial samples produced in `01` (Torch AutoAttack) and `03` (TF2 + ART APGD).\n",
@@ -83,6 +83,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de472964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5041757f",
    "metadata": {},
@@ -129,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "samples: Dict[str, np.ndarray] = {}\n",
     "y_true: Dict[str, np.ndarray] = {}\n",
     "\n",
@@ -152,13 +163,16 @@
     "\n",
     "# ART APGD outputs -> key = \"{tag}_{split}_{weak/strong}\"\n",
     "for p in sorted(apgd_out.glob(\"*.npz\")):\n",
+    "    if 'from' in str(p):\n",
+    "        continue\n",
     "    d = np.load(p)\n",
     "\n",
-    "    split = str(d[\"split\"]) if \"split\" in d else \"unknown\"\n",
-    "    tag   = str(d[\"tag\"])   if \"tag\"   in d else \"unknown\"\n",
+    "    split = str(d[\"split\"]).split('_')[0] if \"split\" in d else \"unknown\"\n",
+    "    # released sample has no tag.\n",
+    "    tag   = str(d[\"tag\"])   if \"tag\"   in d else \"U0\"\n",
     "    it    = int(d[\"max_iter\"]) if \"max_iter\" in d else None\n",
     "\n",
-    "    adv_name = \"APGD_weak\" if it == 2 else (\"APGD_strong\" if it == 10 else f\"it{it}\")\n",
+    "    adv_name = \"APGD_weak\" if it == 2 else \"APGD_strong\"\n",
     "    sample_name = f\"{tag}_{adv_name}_{split}\" if tag else f\"{adv_name}_{split}\"\n",
     "\n",
     "    samples[sample_name] = d[\"x_adv\"].astype(np.float32)\n",
@@ -178,6 +192,34 @@
     "samples[\"U0_union_train\"], y_true[\"U0_union_train\"] = make_union(\"U0\", \"train\")\n",
     "samples[\"U0_union_val\"],   y_true[\"U0_union_val\"]   = make_union(\"U0\", \"val\")\n",
     "samples[\"U0_union_test\"],  y_true[\"U0_union_test\"]  = make_union(\"U0\", \"test\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f2a6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Since released file has no 'tag', put tag manually.\n",
+    "## If it's generated via the notebooks, then this procedure is automatically skipped.\n",
+    "\n",
+    "for p in sorted(apgd_out.glob(\"*.npz\")):\n",
+    "    if not 'first_layer' in str(p) and not 'weak-SP' in str(p):\n",
+    "        continue\n",
+    "    d = np.load(p)\n",
+    "    if 'first_layer' in str(p):\n",
+    "        tag = 'U1'\n",
+    "    elif 'weak-SP' in str(p):\n",
+    "        tag = 'SPs'\n",
+    "    \n",
+    "    split = str(d[\"split\"]).split('_')[0] if \"split\" in d else \"unknown\"\n",
+    "    it    = int(d[\"max_iter\"]) if \"max_iter\" in d else None\n",
+    "    adv_name = \"APGD_weak\" if it == 2 else \"APGD_strong\"\n",
+    "    \n",
+    "    sample_name = f\"{tag}_{adv_name}_{split}\" if tag else f\"{adv_name}_{split}\"\n",
+    "    samples[sample_name] = d[\"x_adv\"].astype(np.float32)\n",
+    "    y_true[sample_name]  = d[\"y\"].astype(np.int64).reshape(-1)"
    ]
   },
   {
@@ -224,7 +266,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.clear_folder(str(cache_root), dry_run=False)\n",
+    "z = input(\"Type 'Y' if you want to clear the cache: \")\n",
+    "if z == 'Y':\n",
+    "    utils.clear_folder(str(cache_root), dry_run=False)\n",
+    "else:\n",
+    "    print(\"Cache not cleared.\")\n",
     "caching = cache_store.ResultStore(root=str(cache_root))\n",
     "\n",
     "\n",
@@ -387,12 +433,147 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40196737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_ent_th_sweep(\n",
+    "    df : pd.DataFrame,\n",
+    "    overall_acc,\n",
+    "    sample_name=\"AA_RBST_test\",\n",
+    "    outdir=None,\n",
+    "    vline_ent_ths: list[float] = [0.0414, 1.0],\n",
+    "    show_legend: bool = False,\n",
+    "    legend_outside: bool = True,\n",
+    "\n",
+    "):\n",
+    "    ''' vline_ent_ths = [ent_th found on validation sample, high entropy threshold (arbitrary)]'''\n",
+    "    assert len(vline_ent_ths) == 2, \"vline_ent_ths must have two thresholds (low and high).\"\n",
+    "\n",
+    "    df = df.copy()\n",
+    "    df[\"ent_th\"] = df[\"ent_th\"].astype(float)\n",
+    "    df = df.sort_values(\"ent_th\").reset_index(drop=True)\n",
+    "\n",
+    "    x = df[\"ent_th\"].to_numpy()\n",
+    "    core_cnt = df[\"core count\"].to_numpy(dtype=float)\n",
+    "    high_cnt = df[\"high count\"].to_numpy(dtype=float)\n",
+    "    acc1 = df[\"acc1\"].to_numpy(dtype=float)\n",
+    "    acc2 = df[\"acc2\"].to_numpy(dtype=float)\n",
+    "\n",
+    "    total_n = core_cnt + high_cnt\n",
+    "    N = float(total_n[0])\n",
+    "\n",
+    "    def _save(fig, name):\n",
+    "        if outdir is None:\n",
+    "            return\n",
+    "        os.makedirs(outdir, exist_ok=True)\n",
+    "        fig.savefig(os.path.join(outdir, name), dpi=300)\n",
+    "\n",
+    "    def nearest_idx(arr, val):\n",
+    "        arr = np.asarray(arr, dtype=float)\n",
+    "        return int(np.argmin(np.abs(arr - float(val))))\n",
+    "\n",
+    "    fig, ax1 = plt.subplots()\n",
+    "    ax2 = ax1.twinx()\n",
+    "\n",
+    "    ax1.plot(x, core_cnt / N, label=\"core coverage\", linestyle=\"--\", color=\"orange\")\n",
+    "    ax1.plot(x, high_cnt / N, label=\"high coverage\", linestyle=\"-.\", color=\"blue\")\n",
+    "\n",
+    "    ax2.plot(x, acc1, linestyle=\"-\", label=\"acc (core)\", color=\"black\")\n",
+    "    ax2.plot(x, acc2, linestyle=\"-\", label=\"acc (high)\", color=\"red\")\n",
+    "\n",
+    "    ax2.axhline(float(overall_acc), linestyle=\":\")\n",
+    "    ax2.annotate(\n",
+    "        f\"overall acc\\n{overall_acc:.4f}\",\n",
+    "        (x[-1], float(overall_acc)),\n",
+    "        textcoords=\"offset points\",\n",
+    "        xytext=(18, 8),\n",
+    "        ha=\"left\",\n",
+    "        va=\"bottom\",\n",
+    "        fontsize=9,\n",
+    "    )\n",
+    "\n",
+    "    ax1.set_xlabel(\"Entropy Threshold\")\n",
+    "    ax1.set_ylabel(\"Coverage\")\n",
+    "    ax2.set_ylabel(\"Accuracy\")\n",
+    "    ax1.set_ylim(0, 1.1)\n",
+    "    ax2.set_ylim(0, 1.1)\n",
+    "\n",
+    "    ax1.grid(False)\n",
+    "    ax2.grid(False)\n",
+    "    plt.yticks([])\n",
+    "\n",
+    "    core_loc = nearest_idx(x, vline_ent_ths[0])\n",
+    "\n",
+    "    ax1.axvline(x[core_loc], linestyle=\"--\", alpha=0.7)\n",
+    "    ax1.annotate(\n",
+    "        f\"{vline_ent_ths[0]:.3f}\",\n",
+    "        (x[core_loc], 0),\n",
+    "        textcoords=\"offset points\",\n",
+    "        xytext=(6, -6),\n",
+    "        ha=\"left\",\n",
+    "        va=\"top\",\n",
+    "        fontsize=11,\n",
+    "    )\n",
+    "\n",
+    "    ax1.plot([x[core_loc]], [core_cnt[core_loc] / N], marker=\"o\", linestyle=\"None\", color=\"black\")\n",
+    "    ax1.annotate(\n",
+    "        f\"{core_cnt[core_loc] / N:.4f}\",\n",
+    "        (x[core_loc], core_cnt[core_loc] / N),\n",
+    "        textcoords=\"offset points\",\n",
+    "        xytext=(-6, 4),\n",
+    "        ha=\"right\",\n",
+    "        va=\"bottom\",\n",
+    "        fontsize=11,\n",
+    "    )\n",
+    "    \n",
+    "    ax2.plot([x[core_loc]], [acc1[core_loc]], marker=\"o\", linestyle=\"None\", color=\"black\")\n",
+    "    ax2.annotate(\n",
+    "        f\"{acc1[core_loc]:.4f}\",\n",
+    "        (x[core_loc], acc1[core_loc]),\n",
+    "        textcoords=\"offset points\",\n",
+    "        xytext=(-6, 4),\n",
+    "        ha=\"right\",\n",
+    "        va=\"bottom\",\n",
+    "        fontsize=11,\n",
+    "    )\n",
+    "\n",
+    "    ax1.set_xscale(\"log\")\n",
+    "\n",
+    "    fig.subplots_adjust(right=0.85, top=0.82)\n",
+    "\n",
+    "    if show_legend:\n",
+    "        lines1, labels1 = ax1.get_legend_handles_labels()\n",
+    "        lines2, labels2 = ax2.get_legend_handles_labels()\n",
+    "        lines = lines1 + lines2\n",
+    "        labels = labels1 + labels2\n",
+    "\n",
+    "        if legend_outside:\n",
+    "            ax1.legend(\n",
+    "                lines,\n",
+    "                labels,\n",
+    "                loc=\"lower center\",\n",
+    "                bbox_to_anchor=(0.5, 1.02),\n",
+    "                ncol=len(labels),\n",
+    "                frameon=True,\n",
+    "                borderaxespad=0.0,\n",
+    "                handlelength=2.0,\n",
+    "                columnspacing=1.2,\n",
+    "            )\n",
+    "        else:\n",
+    "            ax1.legend(lines, labels, loc=\"best\")\n",
+    "\n",
+    "    _save(fig, f\"{sample_name}_counts_and_acc_dualaxis.png\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05479ec3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from source.helpers04note import plot_ent_th_sweep\n",
-    "\n",
     "# adjust this for each figures.\n",
     "# -----\n",
     "LOW_ENT = 0.1\n",
@@ -418,55 +599,52 @@
     "\n",
     "per_sample_ent_th_results = {}\n",
     "\n",
-    "for sample in sorted(samples):\n",
-    "    if not sample.endswith(\"_val\"):\n",
-    "        continue\n",
+    "sample_name = ''\n",
+    "head = \"_\".join(sample_name.split(\"_\")[:-1])  # drop \"_val\"\n",
+    "vth = ent_th_dict.get(head, None)\n",
     "\n",
-    "    head = \"_\".join(sample.split(\"_\")[:-1])  # drop \"_val\"\n",
-    "    vth = ent_th_dict.get(head, None)\n",
+    "# add per-sample vth into sweep thresholds\n",
+    "if vth is None:\n",
+    "    # If no chosen threshold, then it shows 0.0414 as the low threshold\n",
+    "    ent_ths = base_ent_ths\n",
+    "    low_and_high = [float(round(np.log(1.1)/np.log(10), 4)), HIGH_ENT]\n",
+    "else:\n",
+    "    ent_ths = np.unique(np.concatenate([base_ent_ths, np.array([vth], dtype=float)]))\n",
+    "    ent_ths = np.sort(ent_ths)[::-1]\n",
+    "    low_and_high = [float(round(vth, 4)), HIGH_ENT]\n",
+    "    \n",
+    "rows = []\n",
+    "for ent_th in ent_ths:\n",
+    "    ent_th = float(round(float(ent_th), 4))\n",
+    "    result = eval_entropy_fuzzy(\n",
+    "        participating_models=sorted(participating_models.keys()),\n",
+    "        sample_name=sample_name,\n",
+    "        ent_th=ent_th\n",
+    "    )\n",
+    "    per_sample_ent_th_results[(sample_name, ent_th)] = result\n",
+    "    ens = result\n",
+    "    rows.append({\n",
+    "        \"ent_th\": ent_th,\n",
+    "        \"core count\": ens[\"low_entropy_count\"],\n",
+    "        \"acc1\": ens[\"low_entropy_acc\"],\n",
+    "        \"high count\": ens[\"high_entropy_count\"],\n",
+    "        \"acc2\": ens[\"high_entropy_acc\"],\n",
+    "    })\n",
+    "    \n",
     "\n",
-    "    # add per-sample vth into sweep thresholds\n",
-    "    if vth is None:\n",
-    "        # If no chosen threshold, then it shows 0.0414 as the low threshold\n",
-    "        ent_ths = base_ent_ths\n",
-    "        low_and_high = [float(round(np.log(1.1)/np.log(10), 4)), HIGH_ENT]\n",
-    "    else:\n",
-    "        ent_ths = np.unique(np.concatenate([base_ent_ths, np.array([vth], dtype=float)]))\n",
-    "        ent_ths = np.sort(ent_ths)[::-1]\n",
-    "        low_and_high = [float(round(vth, 4)), HIGH_ENT]\n",
-    "        \n",
-    "    rows = []\n",
-    "    for ent_th in ent_ths:\n",
-    "        ent_th = float(round(float(ent_th), 4))\n",
-    "        result = eval_entropy_fuzzy(\n",
-    "            participating_models=sorted(participating_models.keys()),\n",
-    "            sample_name=sample,\n",
-    "            ent_th=ent_th\n",
-    "        )\n",
-    "        per_sample_ent_th_results[(sample, ent_th)] = result\n",
-    "        ens = result\n",
-    "        rows.append({\n",
-    "            \"ent_th\": ent_th,\n",
-    "            \"core count\": ens[\"low_entropy_count\"],\n",
-    "            \"acc1\": ens[\"low_entropy_acc\"],\n",
-    "            \"high count\": ens[\"high_entropy_count\"],\n",
-    "            \"acc2\": ens[\"high_entropy_acc\"],\n",
-    "        })\n",
-    "        \n",
+    "df_sweep = pd.DataFrame(rows)\n",
+    "overall_acc = ens[\"overall_acc\"]\n",
     "\n",
-    "    df_sweep = pd.DataFrame(rows)\n",
-    "    overall_acc = ens[\"overall_acc\"]\n",
-    "\n",
-    "    outdir = f'./results/figures/{sample}_{participating_models_str}_val'\n",
-    "    plot_ent_th_sweep(\n",
-    "        df_sweep,\n",
-    "        overall_acc=overall_acc,\n",
-    "        sample_name=sample,\n",
-    "        outdir=outdir,\n",
-    "        vline_ent_ths=low_and_high,\n",
-    "        show_legend=show_legend,\n",
-    "        legend_outside=legend_outside\n",
-    "    )"
+    "outdir = f'./results/figures/{sample_name}_{participating_models_str}_val'\n",
+    "plot_ent_th_sweep(\n",
+    "    df_sweep,\n",
+    "    overall_acc=overall_acc,\n",
+    "    sample_name=sample_name,\n",
+    "    outdir=outdir,\n",
+    "    vline_ent_ths=low_and_high,\n",
+    "    show_legend=show_legend,\n",
+    "    legend_outside=legend_outside\n",
+    ")"
    ]
   },
   {
@@ -556,10 +734,9 @@
     "\n",
     "def core_stats(ens, X, y, ent_th, sample_name=\"\"):\n",
     "    core_preds, core, _ = ens.core_preds(X, sample_name=sample_name, ent_th=float(ent_th))\n",
-    "    cnt = int(core.sum())\n",
     "    acc = float(np.mean(np.argmax(core_preds, axis=-1) == y[core])) if cnt > 0 else 0.0\n",
     "    cov = float(core.mean())\n",
-    "    return acc, cov, cnt\n",
+    "    return acc, cov\n",
     "\n",
     "truth = y_true[\"original_test\"].reshape(-1)\n",
     "ent_th = 0.95\n",
@@ -582,7 +759,8 @@
     "\n",
     "for name, ens, X in cases:\n",
     "    acc, cov, cnt = core_stats(ens, X, truth, ent_th, sample_name=name)\n",
-    "    print(f\"{name:10s} | core_acc {acc:.4f} | core_cov {cov:.4f} | core_cnt {cnt}\")"
+    "    print(f\"{name:10s} | core_acc {acc:.4f} | core_cov {cov:.4f}\")\n",
+    "    print()"
    ]
   },
   {
@@ -607,6 +785,9 @@
     "model_dict = u0.copy()\n",
     "specialized_model_dict = sps\n",
     "\n",
+    "# baseline = U0, first layer = U1 defined above cell.\n",
+    "baseline = ProbAverageEnsembleFromProbModels(baseline)\n",
+    "first_layer = ProbAverageEnsembleFromProbModels(First_layer)\n",
     "experiment_description = '''\n",
     "Baseline : Res + VGG\n",
     "first layer : Res\n",
@@ -649,8 +830,8 @@
     "U0 can be replaced by U1 or SPs\n",
     "'''\n",
     "sample_name = \"U0_union_test\"\n",
-    "sample = samples[sample_name]\n",
-    "# ------"
+    "# ------\n",
+    "sample = samples[sample_name]\n"
    ]
   },
   {
@@ -788,9 +969,13 @@
     "acc_second_OutCore = float(np.mean(np.argmax(p_second_OutCore, axis=-1) == truth[~first_core_loc]))\n",
     "\n",
     "preds = []\n",
+    "\n",
     "for model_name in Second_layer.keys():\n",
-    "    pred = Second_layer[model_name].predict(X)\n",
-    "    caching.set_pred(model_name, sample_name, pred)\n",
+    "    if (cache_root/sample_name/model_name).exists():\n",
+    "        pred = caching.get_pred(model_name,sample_name)\n",
+    "    else:\n",
+    "        pred = Second_layer[model_name].predict(samples[sample_name])\n",
+    "        caching.set_pred(model_name, sample_name, pred)\n",
     "    preds.append(pred)\n",
     "preds = np.array(preds)\n",
     "ent_second = utils.cross_entropy(preds, 10)\n",
@@ -810,7 +995,7 @@
     "\n",
     "aa_acc_baseline = float(np.mean(np.argmax(baseline.probs(sample_aa, sample_name_aa), axis=-1) == truth_aa))\n",
     "\n",
-    "first_layer = ProbAverageEnsembleFromProbModels(First_layer)\n",
+    "\n",
     "aa_p_first_layer = first_layer.probs(sample_aa, sample_name_aa)\n",
     "aa_acc_first = float(np.mean(np.argmax(aa_p_first_layer, axis=-1) == truth_aa))\n",
     "aa_first_ent = caching.get_entropy(sorted(First_layer.keys()), sample_name_aa)\n",
@@ -827,8 +1012,11 @@
     "aa_acc_second_OutCore = float(np.mean(np.argmax(aa_p_second_OutCore, axis=-1) == truth_aa[~aa_first_core_loc])) \n",
     "preds = []\n",
     "for model_name in Second_layer.keys():\n",
-    "    pred = Second_layer[model_name].predict(X)\n",
-    "    caching.set_pred(model_name, sample_name_aa, pred)\n",
+    "    if (cache_root/sample_name_aa/model_name).exists():\n",
+    "        pred = caching.get_pred(model_name,sample_name_aa)\n",
+    "    else:\n",
+    "        pred = Second_layer[model_name].predict(samples[sample_name_aa])\n",
+    "        caching.set_pred(model_name, sample_name_aa, pred)\n",
     "    preds.append(pred)\n",
     "preds = np.array(preds)\n",
     "aa_ent_second = utils.cross_entropy(preds, 10)\n",
@@ -869,6 +1057,21 @@
     "    f\"total core entropy (first layer) + core entropy (second layer) : {np.sum(first_core_ent) + np.sum(ent_second[second_core])}\",\n",
     "    f\"maximum acc among baseline, first layer, second layer : {max(acc_baseline, acc_first, acc_second)}\",\n",
     "    f\"difference between gated ensemble and maximum acc : {acc_gated - max(acc_baseline, acc_first, acc_second)}\",\n",
+    "    \"\",\n",
+    "    \"AutoAttack result\",\n",
+    "    f\"AA Sample name : {sample_name_aa} (size : {sample_aa.shape[0]}), out_of_core_th : {out_of_core_th}\",\n",
+    "    f\"First layer acc : {aa_acc_first}\",\n",
+    "    f\"Baseline acc : {aa_acc_baseline}\",\n",
+    "    f\"Second layer acc : {aa_acc_second}\",\n",
+    "    f\"All members ensemble acc : {aa_acc_all}\",\n",
+    "    f\"Entropy threshold for first layer : {out_of_core_th}\",\n",
+    "    f\"First layer core acc : {aa_core_acc_first} (size : {np.sum(aa_first_core_loc)})\",\n",
+    "    f\"Second layer acc on OutCore from first layer  : {aa_acc_second_OutCore} (size : {np.sum(~aa_first_core_loc)})\",\n",
+    "    f\"Second layer core acc on OutCore from first layer : {aa_acc_second_core_of_OutCore} (size : {np.sum(aa_second_core)})\",\n",
+    "    f\"Gated ensemble  acc : {aa_acc_gated}\",\n",
+    "    f\"First layer entropy : {np.sum(aa_first_ent)}\",\n",
+    "    f\"First layer core entropy : {np.sum(aa_first_ent[aa_first_core_loc])}\",\n",
+    "    f\"Total entropy = first layer core entropy + 2nd layer ent on outcore : {np.sum(aa_first_ent[aa_first_core_loc])} + {np.sum(aa_ent_second)}\"\n",
     "])\n",
     "\n",
     "log_text(\"./results/logs/evaluation_results.txt\", txt)"
